--- a/05_Fine_Tuning_Transfer_Learning.ipynb
+++ b/05_Fine_Tuning_Transfer_Learning.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1GvKZJDJ2-6PgSmIBYRsimOF8EVajzce1",
-      "authorship_tag": "ABX9TyPfnDooEXIPlGRf/SyVfZ5M",
+      "authorship_tag": "ABX9TyNqcdSwbzEXpy5wygsi4EJJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1040,39 +1040,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Basic overview of the process\n",
-        "#### Preprocessing the data\n",
-        "- Get the [helper_functions.py](https://github.com/mrdbourke/tensorflow-deep-learning/blob/main/extras/helper_functions.py)\n",
-        "file always and import some functions in it.\n",
-        "- You may create different helper functions and use them directly here.\n",
-        "- Then get the data by downloading it from the net and then unzip it using unzip_data function imported from helper_functions.py.\n",
-        "- then walk_through_dir to know what folders do you have and how many images are there in each folder\n",
-        "- Then split the directories in Train and Test dir\n",
-        "- then set an IMG_SIZE, BATCH_SIZE and EPOCHS\n",
-        "- Then turn that those training and testing directories into data batches via image_dataset_from_directory(directory=path_to_directory,image_size=IMG_SIZE,batch_size=BATCH_SIZE,label_mode=BINARY OR CATEGORICAL)\n",
-        "- you can check the shape by typing the name of the data.\n",
-        "- You can also check the class names by adding .class_names\n",
-        "\n",
-        "#### Creating a model\n",
-        " 1. BASE MODEL with tf.keras.applications.MODEL_NAME(include_top=(binary)) base_model as model\n",
-        " 2. if True then you cannot change the output shape if false then you can\n",
-        " 3. set base_model.trainable = False if you do not want the whole model to train\n",
-        " 4. Define the input layer with shape and name\n",
-        " 5. if ResNetv2 it will need normalization if or rescaling\n",
-        " 6. Pass the inputs to the base model x as layer\n",
-        " 7. Add a pooling layer to pick the most important features and reduce the number of computations x as layer GlobalAveragePooling2D\n",
-        " 8. write an output layer and pass the x as layer with Dense layer and neurons=classes, activation=(softmax or sigmoid) and name\n",
-        " 9. Combine the input and upto x(outut) layers via keras.Model()\n",
-        " 10. Compile the model loss (binary_crossentropy,sparse_categorical or categorical), optimizers (SGD or Adam), metrics (accuracy, recall precision f1)\n",
-        " 11. Fit the model (history = model.fit(train_data,epochs,steps_per_epoch,validation_data,validation_steps), callbacks)"
-      ],
-      "metadata": {
-        "id": "IsLcCI34i-ZW"
-      }
     },
     {
       "cell_type": "code",
@@ -2407,6 +2374,40 @@
       ],
       "metadata": {
         "id": "Kj8txjBPF2lT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Basic overview of the process\n",
+        "#### Preprocessing the data\n",
+        "- Get the [helper_functions.py](https://github.com/mrdbourke/tensorflow-deep-learning/blob/main/extras/helper_functions.py)\n",
+        "file always and import some functions in it.\n",
+        "- You may create different helper functions and use them directly here.\n",
+        "- Then get the data by downloading it from the net and then unzip it using unzip_data function imported from helper_functions.py.\n",
+        "- then walk_through_dir to know what folders do you have and how many images are there in each folder\n",
+        "- Then split the directories in Train and Test dir\n",
+        "- then set an IMG_SIZE, BATCH_SIZE and EPOCHS\n",
+        "- Then turn that those training and testing directories into data batches via image_dataset_from_directory(directory=path_to_directory,image_size=IMG_SIZE,batch_size=BATCH_SIZE,label_mode=BINARY OR CATEGORICAL)\n",
+        "- you can check the shape by typing the name of the data.\n",
+        "- You can also check the class names by adding .class_names\n",
+        "\n",
+        "#### Creating a model\n",
+        " 1. BASE MODEL with tf.keras.applications.MODEL_NAME(include_top=(binary)) base_model as model\n",
+        " 2. if True then you cannot change the output shape if false then you can\n",
+        " 3. set base_model.trainable = False if you do not want the whole model to train\n",
+        " 4. Define the input layer with shape and name\n",
+        " 5. if ResNetv2 it will need normalization if or rescaling\n",
+        " 6. Pass the inputs to the base model x as layer\n",
+        " 7. Add a pooling layer to pick the most important features and reduce the number of computations x as layer GlobalAveragePooling2D\n",
+        " 8. write an output layer and pass the x as layer with Dense layer and neurons=classes, activation=(softmax or sigmoid) and name\n",
+        " 9. Combine the input and upto x(outut) layers via keras.Model()\n",
+        " 10. Compile the model loss (binary_crossentropy,sparse_categorical or categorical), optimizers (SGD or Adam), metrics (accuracy, recall precision f1)\n",
+        " 11. Fit the model (history = model.fit(train_data,epochs,steps_per_epoch,validation_data,validation_steps), callbacks)\n",
+        " 12. Plot loss curves"
+      ],
+      "metadata": {
+        "id": "IsLcCI34i-ZW"
       }
     },
     {
