--- a/05_Fine_Tuning_Transfer_Learning.ipynb
+++ b/05_Fine_Tuning_Transfer_Learning.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1GvKZJDJ2-6PgSmIBYRsimOF8EVajzce1",
-      "authorship_tag": "ABX9TyNqcdSwbzEXpy5wygsi4EJJ",
+      "authorship_tag": "ABX9TyOl60Hm6YRQ5ktmaui3nGtZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,58 @@
       ],
       "metadata": {
         "id": "RE47xrmizXyt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Basic overview of the process for feature extraction models\n",
+        "#### Preprocessing the data\n",
+        "- Get the [helper_functions.py](https://github.com/mrdbourke/tensorflow-deep-learning/blob/main/extras/helper_functions.py)\n",
+        "file always and import some functions in it.\n",
+        "- You may create different helper functions and use them directly here.\n",
+        "- Then get the data by downloading it from the net and then unzip it using unzip_data function imported from helper_functions.py.\n",
+        "- then walk_through_dir to know what folders do you have and how many images are there in each folder\n",
+        "- Then split the directories in Train and Test dir\n",
+        "- then set an IMG_SIZE, BATCH_SIZE and EPOCHS\n",
+        "- Then turn that those training and testing directories into data batches via image_dataset_from_directory(directory=path_to_directory,image_size=IMG_SIZE,batch_size=BATCH_SIZE,label_mode=BINARY OR CATEGORICAL)\n",
+        "- you can check the shape by typing the name of the data.\n",
+        "- You can also check the class names by adding .class_names\n",
+        "### Augmentation of Data\n",
+        "- Now if you want to augment the data you can do it here\n",
+        "- Create a Sequetial Layer within it with RandomFlip(), RandomRotation(),\n",
+        "RandomZoom(), RandomWidth() etc. if Rescaling Required can be done here.\n",
+        "\n",
+        "\n",
+        "### Creating a plot to visualize\n",
+        "- Choose a random class\n",
+        "-  choose a random image from it by using listdir from os module\n",
+        "- create a image path\n",
+        "- read the image with mpimg.imread()\n",
+        "- plot it with plt.imshow()\n",
+        "- then design with plt.title() plt.axis(False)\n",
+        "- Create a new figure or make a subplot at starting\n",
+        "- pass the image to data_augmentation(img, training=True) training is set to True or else it will not display the image\n",
+        "- plot the image with plt.imshow(aug_img/255) to rescale it because matplotilib can either plot intergers or within [0,1].\n",
+        "\n",
+        "\n",
+        "#### Creating a model\n",
+        " 1. BASE MODEL with tf.keras.applications.MODEL_NAME(include_top=(binary)) base_model as model\n",
+        " 2. if True then you cannot change the output shape if false then you can\n",
+        " 3. set base_model.trainable = False if you do not want the whole model to train\n",
+        " 4. Define the input layer with shape and name\n",
+        " - When creating the model pass the aug model before the passing the inputs to the base model as x = data_aug(x)\n",
+        " 5. if ResNetv2 it will need normalization if or rescaling\n",
+        " 6. Pass the inputs to the base model x as layer also if x is passed to a layer it will be on the right if x is model it will be passed within it\n",
+        " 7. Add a pooling layer to pick the most important features and reduce the number of computations x as layer GlobalAveragePooling2D\n",
+        " 8. write an output layer and pass the x as layer with Dense layer and neurons=classes, activation=(softmax or sigmoid) and name\n",
+        " 9. Combine the input and upto x(outut) layers via keras.Model()\n",
+        " 10. Compile the model loss (binary_crossentropy,sparse_categorical or categorical), optimizers (SGD or Adam), metrics (accuracy, recall precision f1)\n",
+        " 11. Fit the model (history = model.fit(train_data,epochs,steps_per_epoch,validation_data,validation_steps), callbacks)\n",
+        " 12. Plot loss curves"
+      ],
+      "metadata": {
+        "id": "IsLcCI34i-ZW"
       }
     },
     {
@@ -2374,40 +2426,6 @@
       ],
       "metadata": {
         "id": "Kj8txjBPF2lT"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Basic overview of the process\n",
-        "#### Preprocessing the data\n",
-        "- Get the [helper_functions.py](https://github.com/mrdbourke/tensorflow-deep-learning/blob/main/extras/helper_functions.py)\n",
-        "file always and import some functions in it.\n",
-        "- You may create different helper functions and use them directly here.\n",
-        "- Then get the data by downloading it from the net and then unzip it using unzip_data function imported from helper_functions.py.\n",
-        "- then walk_through_dir to know what folders do you have and how many images are there in each folder\n",
-        "- Then split the directories in Train and Test dir\n",
-        "- then set an IMG_SIZE, BATCH_SIZE and EPOCHS\n",
-        "- Then turn that those training and testing directories into data batches via image_dataset_from_directory(directory=path_to_directory,image_size=IMG_SIZE,batch_size=BATCH_SIZE,label_mode=BINARY OR CATEGORICAL)\n",
-        "- you can check the shape by typing the name of the data.\n",
-        "- You can also check the class names by adding .class_names\n",
-        "\n",
-        "#### Creating a model\n",
-        " 1. BASE MODEL with tf.keras.applications.MODEL_NAME(include_top=(binary)) base_model as model\n",
-        " 2. if True then you cannot change the output shape if false then you can\n",
-        " 3. set base_model.trainable = False if you do not want the whole model to train\n",
-        " 4. Define the input layer with shape and name\n",
-        " 5. if ResNetv2 it will need normalization if or rescaling\n",
-        " 6. Pass the inputs to the base model x as layer\n",
-        " 7. Add a pooling layer to pick the most important features and reduce the number of computations x as layer GlobalAveragePooling2D\n",
-        " 8. write an output layer and pass the x as layer with Dense layer and neurons=classes, activation=(softmax or sigmoid) and name\n",
-        " 9. Combine the input and upto x(outut) layers via keras.Model()\n",
-        " 10. Compile the model loss (binary_crossentropy,sparse_categorical or categorical), optimizers (SGD or Adam), metrics (accuracy, recall precision f1)\n",
-        " 11. Fit the model (history = model.fit(train_data,epochs,steps_per_epoch,validation_data,validation_steps), callbacks)\n",
-        " 12. Plot loss curves"
-      ],
-      "metadata": {
-        "id": "IsLcCI34i-ZW"
       }
     },
     {
