--- a/06_Transfer_Learning_Scaling_up.ipynb
+++ b/06_Transfer_Learning_Scaling_up.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM/Ja8K8eHA1UTcygUXFTcl",
+      "authorship_tag": "ABX9TyNZXDPq7p6LoWPG+NbMuxS1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Basic go-through for any project\n",
+        "\n",
         "- Start with a small data 1% or 10% and build a small model.\n",
         "- Next build a big model with small data\n",
         "- Increase the data\n",
@@ -69,15 +71,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ClY3vnyhCVt4",
-        "outputId": "f936af0f-3b5b-4b3d-d2a6-fbb08de98835"
+        "outputId": "95384c4b-bac8-4215-f027-0edc53d62c57"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Wed Nov 15 03:35:36 2023       \n",
+            "Wed Nov 15 04:59:48 2023       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 525.105.17   Driver Version: 525.105.17   CUDA Version: 12.0     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -86,7 +88,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   40C    P8     9W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
+            "| N/A   65C    P8    11W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -116,24 +118,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZWZimnmjCfZP",
-        "outputId": "4d8eb2c2-ad08-410a-d331-0713263fbe5d"
+        "outputId": "e49c5cb9-156c-414d-fec1-1844169cd25e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-11-15 03:35:41--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n",
+            "--2023-11-15 04:59:48--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 10246 (10K) [text/plain]\n",
             "Saving to: ‘helper_functions.py’\n",
             "\n",
-            "\rhelper_functions.py   0%[                    ]       0  --.-KB/s               \rhelper_functions.py 100%[===================>]  10.01K  --.-KB/s    in 0s      \n",
+            "helper_functions.py 100%[===================>]  10.01K  --.-KB/s    in 0s      \n",
             "\n",
-            "2023-11-15 03:35:41 (120 MB/s) - ‘helper_functions.py’ saved [10246/10246]\n",
+            "2023-11-15 04:59:48 (101 MB/s) - ‘helper_functions.py’ saved [10246/10246]\n",
             "\n"
           ]
         }
@@ -165,24 +167,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b8J3Tto5Cqp_",
-        "outputId": "40c45ac6-1c5b-4e00-e06f-6c2b7a101d08"
+        "outputId": "0d5408fe-fe26-42e8-dc04-5f21ebf7c11f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-11-15 03:35:45--  https://storage.googleapis.com/ztm_tf_course/food_vision/101_food_classes_10_percent.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 173.194.202.207, 173.194.203.207, 74.125.199.207, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|173.194.202.207|:443... connected.\n",
+            "--2023-11-15 04:59:53--  https://storage.googleapis.com/ztm_tf_course/food_vision/101_food_classes_10_percent.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 108.177.98.207, 74.125.197.207, 74.125.135.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|108.177.98.207|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1625420029 (1.5G) [application/zip]\n",
             "Saving to: ‘101_food_classes_10_percent.zip’\n",
             "\n",
-            "101_food_classes_10 100%[===================>]   1.51G  86.1MB/s    in 19s     \n",
+            "101_food_classes_10 100%[===================>]   1.51G   193MB/s    in 7.3s    \n",
             "\n",
-            "2023-11-15 03:36:04 (80.2 MB/s) - ‘101_food_classes_10_percent.zip’ saved [1625420029/1625420029]\n",
+            "2023-11-15 05:00:00 (212 MB/s) - ‘101_food_classes_10_percent.zip’ saved [1625420029/1625420029]\n",
             "\n",
             "There are 2 directories and 0 images in '101_food_classes_10_percent'.\n",
             "There are 101 directories and 0 images in '101_food_classes_10_percent/test'.\n",
@@ -403,7 +405,7 @@
       "metadata": {
         "id": "DYtG0ryACuPt"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -430,9 +432,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aTgq-yTjC95z",
-        "outputId": "8e874f8a-662b-4f98-b967-b728a355845c"
+        "outputId": "6650c76b-a017-4ddc-b1e4-7f23d8959f91"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,7 +469,10 @@
       "source": [
         "# Setup checkpoint callback for later use\n",
         "checkpoint_path = \"101_classes_10_percent_data_model_checkpoint\"\n",
-        "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint\n"
+        "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(checkpoint_path,\n",
+        "                                                         save_weights_only=True,\n",
+        "                                                         monitor=\"val_accuracy\",\n",
+        "                                                         save_best_only=True)\n"
       ],
       "metadata": {
         "id": "9LQw0CebDRhQ"
@@ -476,17 +481,30 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "The checkpoint is ready now let us create a dataa augmentation layer now let us create a augmentation model with sequetial API. Due to we have a small dataset we now want to augment the data as to prevent overfitting.\n"
+      ],
       "metadata": {
         "id": "h_5dorPEDReh"
-      },
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Import required modules from tensorflow\n",
+        "from tensorflow.keras import layers\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "\n",
+        "# Now lets create a augmentation model with RandomFlip, RandomRotation, RandomZoom, RandomHeight, RandomWidth\n",
+        "data_augmentation = Sequential([\n",
+        "    layers.RandomFlip(\"horizontal\"),\n",
+        "    layers.RandomHeight(0.2),\n",
+        "    layers.RandomWidth(0.2),\n",
+        "    layers.RandomZoom(0.2),\n",
+        "    layers.RandomRotation(0.2)\n",
+        "],name=\"data_augmentation\")"
+      ],
       "metadata": {
         "id": "yvJ1f6BJDRaD"
       },
